--- a/scss/abstract/variables.scss
+++ b/scss/abstract/variables.scss
@@ -2,3 +2,5 @@ $primary-color:#272727;
 $secondary-color:#ff652f;
 $tect-color:#eee;
 $font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+$main-bgImage-path: '../../img/model-1.jpg';
