--- a/css/ctyle.css
+++ b/css/ctyle.css
@@ -31,6 +31,18 @@
   background-size: cover;
 }
 
+.home {
+  border: 2px solid red;
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+.home__name {
+  font-size: 5rem;
+}
+
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1;
@@ -39,4 +51,4 @@ body {
   height: 100vh;
 }
 
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=ctyle.css.map */
